<resources>
    <string name="app_name">Eventracker</string>
    <string name="view_calendar">View Calendar</string>
    <string name="back_to_events">Back to Events</string>
    <string name="title">Title</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="add">Add</string>
    <string name="remarks">remarks</string>
    <string name="make_private">Make private</string>
    <string name="the_date">The Date</string>
    <string name="new_group">New group</string>
    <string name="add_participants">Add participants</string>
    <string name="select_friends_to_be_in_the_group">Select friends to be in the group.</string>
    <string name="choose_new_admin">Choose new admin</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_new_members">Add new members</string>
    <string name="back_to_group_calendar">Back to group calendar</string>
    <string name="group_name">GroupName</string>
    <string name="to">To:</string>
    <string name="admin">Admin</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send">send</string>
    <string name="add_event">Add Event</string>
    <string name="find_users">Find users</string>
    <string name="enter_user_email_here">Enter user email here</string>
    <string name="enter">Enter</string>
    <string name="user_found">User Found</string>
    <string name="friends_list">Friends list</string>
    <string name="click_on_the_username_to_access_their_information">click on the username to access their information</string>
    <string name="number_of_participants">Number of Participants: %1$d</string>
    <string name="default_end_time">09:00</string>
    <string name="default_start_time">08:00</string>
    <string name="description">Description</string>
    <string name="leave_group">Leave group</string>
    <string name="back">Back</string>
    <string name="group_list">Group list</string>
    <string name="add_group">add group</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_user_log_in_here">Already a user? Log in here!</string>
    <string name="request_list">Request List</string>
    <string name="type_group_subject_here">Type Group Subject Here&#8230;</string>
    <string name="user_email">UserEmail</string>
    <string name="request_btn">requestBtn</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>
